# Replace the contents of kernel/Cargo.toml with this

[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
# We are replacing bootloader with the correct version of limine
limine = "0.5.0" 
volatile = "0.2.6"
spin = "0.5.2"
lazy_static = { version = "1.0", features = ["spin_no_std"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
